# wray

./: .clippy.toml  Cargo.toml  FORMAT.md  LICENSE  OBJECTIVES.md  README.md  pyproject.toml  rustfmt.toml
src/: dataset.rs  error.rs  format.rs  lib.rs  records.rs  table.rs  util.rs  writer.rs
src/database/: measurements.rs  mod.rs  spectra.rs  spectrometers.rs  table.rs
src/database/intensities/: accumulator.rs  mod.rs
src/database/measurements/: accumulator.rs  builder.rs  mod.rs
src/database/wavelengths/: accumulator.rs  mod.rs  record.rs
src/dataset/: finished.rs  mod.rs  unfinished.rs
src/format/: FORMAT.md  header.rs  manifest.rs  mod.rs  segment.rs  todo_arrow_batches_replace_segments.md
src/intensities/: builder.rs  mod.rs  record.rs
src/measurements/: builder.rs  mod.rs  record.rs
src/wavelengths/: builder.rs  mod.rs  record.rs
test/: measurements.parquet  spectrometers.parquet
