[package]
name = "optic"
version = "0.1.0"
edition = "2024"
description = "Standardised data storage for diffuse reflectance spectroscopy imaging, written in Rust."
categories = ["science", "science::robotics", "database-implementations"]
keywords = ["database", "data-storage", "spectroscopy", "imaging", "optics"]
license = "BSD-3-Clause"
authors = ["Amelia Fraser-Dale"]
repository = "https://github.com/MillieFD/optic"

# See a full list of keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "optic"
crate-type = ["lib"]

[features]
default = ["x", "y"]
x = []
y = []
z = []
a = []

[dependencies.arrow]
version = "57.3"
default-features = false
features = ["ipc_compression"]

[dependencies.uom]
version = "0.38"
default-features = false
features = ["si", "f64"]
