[package]
name = "wray"
version = "0.2.0"
edition = "2024"
description = "Standardised data storage for optical spectroscopy, written in Rust."
categories = ["data-structures", "science", "science::robotics", "science::bioinformatics"]
keywords = ["database", "data-storage", "spectroscopy", "imaging", "optics"]
license = "BSD-3-Clause"
authors = ["Amelia Fraser-Dale"]
repository = "https://github.com/MillieFD/wray"

# See a full list of keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.clippy]
# Base lint profiles
cargo = "warn"
pedantic = "warn"
# Specific lint options
alloc_instead_of_core = "deny"
allow_attributes_without_reason = "deny"
arithmetic_side_effects = "warn"
many_single_char_names = "allow"
match_bool = "allow"
missing_const_for_fn = "deny"
mutex_atomic = "deny"
similar_names = "allow"
try_err = "deny"
unwrap_used = "deny"
wildcard_dependencies = "allow"

# See a full list of keys and their definitions at https://rust-lang.github.io/rust-clippy/stable/index.html

[lib]
name = "wray"
crate-type = ["lib"]

[dependencies]
toml = "1.0"

[dependencies.arrow]
version = "58.0"
default-features = false
features = ["ipc_compression"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dev-dependencies]
tempfile = "3.27"
