[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "optic"
version = "0.1.0"
description = "Standardised data storage for diffuse reflectance spectroscopy imaging"
readme = "README.md"
authors = [
    {name = "Amelia Fraser-Dale"}
]
license = {text = "BSD-3-Clause"}
keywords = ["database", "data-storage", "spectroscopy", "imaging", "optics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering",
]
requires-python = ">=3.8"

[tool.maturin]
python-source = "python"
module-name = "optic"
features = ["pyo3/extension-module"]
